# sequential-integration

./: Cargo.toml  readme.md
src/: calculation_functions.rs  errors.rs  lib.rs
src/engine/: bounds.rs  calculation_result.rs  calculation_step.rs  function_types.rs  helper_equation_traits.rs  mod.rs  range_generator.rs  utils.rs
src/engine/integrators/: first_integrator.rs  mod.rs  second_integrator.rs  third_integrator.rs
src/engine/integrators/utils/: bounds_configurator.rs  mod.rs
src/engine/quadrature/: mod.rs  simpson_quadrature_double_integral.rs  simpson_quadrature_triple_integral.rs
src/engine/quadrature/simpson/: mod.rs  simpson_quadrature_double_integral.rs  simpson_quadrature_single_integral.rs  simpson_quadrature_triple_integral.rs  simpson_range.rs
src/engine/quadrature/simpson/utils/: mod.rs  simpson_points.rs
src/engine/range_generator/: mod.rs  step_type.rs
tests/: calculate_double_integral_simpson_test.rs  calculate_single_integral_simpson_test.rs  calculate_triple_integral_simpson_test.rs
