[package]
name = "sequential-integration"
version = "0.0.1"
authors = ["Sergey Frantsishkov <mgistrser@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fehler = "1.0.0"
mexprp = "0.3.0"
snafu = {version = "0.6.8", features = ["backtraces", "backtraces-impl-backtrace-crate"]}

[dev-dependencies]
assert_approx_eq = "1.1.0"
