[package]
name = "sequential-integration"
description = "Lightweight library for sequential integration"
version = "1.0.0"
authors = ["Sergey Frantsishkov <mgistrser@gmail.com>"]
edition = "2018"
repository = "https://github.com/magistrser/sequential-integration"
license = "MIT"
keywords = ["integral", "math", "simpson", "sequential", "integration"]
readme = "readme.md"
categories = ["mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fehler = "1.0.0"
snafu = {version = "0.6.8", features = ["backtraces", "backtraces-impl-backtrace-crate"]}

[dev-dependencies]
assert_approx_eq = "1.1.0"
